unpackaged/main/default/objects/ia_crm__Department__c/ia_crm__Department__c.object-meta.xml
<CustomObject>
    <label>Department</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>