unpackaged/main/default/objects/ia_crm__Department__c/fields/ia_crm__Department_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Department_ID__c</fullName>
    <label>Department ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>