unpackaged/main/default/objects/ia_crm__Department__c/fields/ia_crm__Employee__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ia_crm__Employees__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Employees__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>