unpackaged/main/default/objects/ia_crm__Department__c/fields/ia_crm__Manager__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Manager__c</fullName>
    <label>Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>