unpackaged/main/default/objects/ia_crm__Department__c/fields/ia_crm__Status__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>